--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,13 @@
             <span>Bearish: <span id="bear_ratio" class="text-red">--%</span></span>
         </div>
         <div class="sentiment-score" id="sentiment_avg">Net Score: 0.00</div>
+
+        <!-- Live AI Commentary (Pseudo-Live) -->
+        <div class="sentiment-commentary" id="sentiment_feed">
+            <div class="comment-item active">
+                <span class="comment-prefix">AI_BOT:</span> Synchronizing market sentiment...
+            </div>
+        </div>
     </div>
 
     <!-- Spread Radar Card -->
