--- a/templates/index.html
+++ b/templates/index.html
@@ -113,8 +113,8 @@
     <div class="card factors-card glass">
         <div class="card-header">Key Risk Watchlist</div>
         <ul class="factors-list" id="risk_watchlist">
-            <li><span class="dot gold"></span>
-                <div><strong>Synchronizing</strong>: Analyzing market risks...</div>
+            <li><span class="dot grey"></span>
+                <div><strong>Initializing</strong>: Connecting to risk engine...</div>
             </li>
         </ul>
     </div>
